# morskoy_boy_android_qt

./: CMakeLists.txt  README.md  classes.cpp  classes.h  main.cpp  mainwindow.cpp  mainwindow.h  tst_gamelogic.cpp
